# hipaa_qa_rag_solution

./: .gitignore  Dockerfile.backend  Dockerfile.database  Dockerfile.frontend  Dockerfile.nginx  LICENSE  README.md  docker-compose.yml  env.example  output.txt  pyproject.toml  test_ground_truth_qa.py  test_questions_ground_truth.md
data/clean/: hipaa_regulations.txt
docker/db/: init.sql
docs/: API.md  DEPLOYMENT.md
frontend/: app.py
nginx/: nginx.conf
scripts/: cleanup.py  enhanced_hipaa_parser.py  ingest_enhanced_data.py  pdf_extractor.py  run_dev.sh
src/hipaa_qa/: __init__.py  config.py  main.py  schemas.py
src/hipaa_qa/api/: __init__.py  dependencies.py  main.py  middleware.py  state.py
src/hipaa_qa/api/routes/: __init__.py  health.py  ingestion.py  qa.py
src/hipaa_qa/database/: __init__.py  connection.py  models.py  repository.py
src/hipaa_qa/services/: __init__.py  embedding_service.py  enhanced_qa_service.py  ingestion_service.py  qa_service.py
